--- a/ansible/roles/application/tasks/main.yml
+++ b/ansible/roles/application/tasks/main.yml
@@ -7,11 +7,9 @@
   mysql_db: name={{ project_mysql_dbname }} state=present
   ignore_errors: yes
 
-- name: Clean Project directory
-  shell: cd {{ vhost_document_root }} && rm -Rf *
-
-- name: Clone Project git repo
-  git: repo={{ project_repo }} dest={{ vhost_document_root }}
+- name: Check git code exists - git checkout, if no - git clone
+  shell: if [ -d {{ vhost_document_root }}/.git]; then /bin/echo "Git repo found." && git checkout; else cd {{ vhost_document_root }} && rm -Rf * && git clone {{ project_repo }} .; fi
+  ignore_errors: True
 
 - name: Install Project
-  shell: cd {{ vhost_document_root }} php -f install.php -- --license_agreement_accepted yes --locale en_US --timezone "America/Los_Angeles" --default_currency USD --db_host localhost --db_name {{ project_mysql_dbname }} --db_user {{ project_mysql_user }} --db_pass {{ project_mysql_password }} --url "http://{{ vhost_server_name }}/" --secure_base_url "http://{{ vhost_server_name }}/"  --use_rewrites yes --use_secure no --use_secure_admin no --admin_lastname Admin --admin_firstname Admin --admin_email "gergund@gmail.com" --admin_username admin --admin_password 123123qa --skip_url_validation
+  shell: cd {{ vhost_document_root }} && php -f install.php -- --license_agreement_accepted yes --locale en_US --timezone "America/Los_Angeles" --default_currency USD --db_host localhost --db_name {{ project_mysql_dbname }} --db_user {{ project_mysql_user }} --db_pass {{ project_mysql_password }} --url "http://{{ vhost_server_name }}/" --secure_base_url "http://{{ vhost_server_name }}/"  --use_rewrites yes --use_secure no --use_secure_admin no --admin_lastname Admin --admin_firstname Admin --admin_email "gergund@gmail.com" --admin_username admin --admin_password 123123qa --skip_url_validation
